# opcua

./: open62541_install.txt
myOwnOpcua/: client  client.c  open62541.c  open62541.h  server  server.c  test.c
runDemoOpen62541/: CMakeLists.txt
runDemoOpen62541/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
runDemoOpen62541/src/: client.c  server.c
